# smart-parking

./: .gitignore  CMakeLists.txt  README.md
data/: parking_space.hpp  simulation_events.csv  vehicle.cpp  vehicle.hpp
dataset/: parking_lot_config.csv
generators/: generate_dataset.cpp
report/: simulation_report.txt
src/: CMakeLists.txt  enum.hpp  main.cpp
src/application/: config.hpp  simulation_runner.cpp  simulation_runner.hpp
src/data/: parking_space.cpp
src/domain/: parking_lot.cpp  parking_lot.hpp  parking_manager.cpp  parking_manager.hpp  vehicle_tracker.cpp  vehicle_tracker.hpp
src/integration/: dataset_loader.cpp  dataset_loader.hpp
tests/: CMakeLists.txt
